# cpp-exercices

./: .gitignore  CMakeLists.txt  README.md
src/: bubblesort.cpp  factorial.cpp  insertionsort.cpp  mergesort.cpp
